--- a/css/styles.css
+++ b/css/styles.css
@@ -34,16 +34,16 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #1abc9c;
-  --bs-secondary: #2c3e50;
+  --bs-primary: #2daed6;
+  --bs-secondary: #01315D;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 26, 188, 156;
-  --bs-secondary-rgb: 44, 62, 80;
+  --bs-primary-rgb: 45, 174, 214;
+  --bs-secondary-rgb: rgb(1,49,93);
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -10996,7 +10996,6 @@ html {
   }
 }
 .portfolio .portfolio-item {
-  cursor: pointer;
   position: relative;
   display: block;
   max-width: 25rem;
@@ -11043,4 +11042,38 @@ html {
 
 .copyright {
   background-color: #1a252f;
+}
+
+/* CUSTOM */
+
+#about h2 {
+    letter-spacing: -0.02em;
+    line-height: 0.98em;
+    font-size: 150px;
+}
+
+#about h3 {
+    letter-spacing: 0.05em;
+    font-weight: 100;
+}
+
+#about h3#date {
+    letter-spacing: 0.04em;
+    color:
+}
+
+.masthead .masthead-avatar {
+    width: 30rem;
+}
+
+#presentation {
+    background: url(../assets/img/Ilha-do-Prumirim-Ubatuba.jpg);
+    background-position: center;
+    padding-bottom: 20rem;
+}
+
+.portfolio-item img {
+    width: 15rem;
+    margin: 0 auto;
+    display: table;
 }
