--- a/css/styles.css
+++ b/css/styles.css
@@ -11078,6 +11078,10 @@ html {
     display: table;
 }
 
+#terra-viva {
+    padding-top: 5rem;
+}
+
 @media (max-width: 767px) {
     html {
         width: 100% !important;
@@ -11088,7 +11092,7 @@ html {
     .masthead .masthead-avatar {
         width: 22rem !important;
     }
-    #prefeitura {
+    #prefeitura, #terra-viva {
         padding-top: 0px !important;
     }
 }
